--- a/config/atlas_config.yaml
+++ b/config/atlas_config.yaml
@@ -44,6 +44,13 @@ assembly:
     # minimum length of contigs to output
     minimum_contig_length: 200
     filtered_contig_length: 1000
+annotation:
+    memory: 8096 # needs megabyte amount.  autodetect?
+    threads: 24
+    sequencing_error_model: illumina_10
+    # https://www.ncbi.nlm.nih.gov/Taxonomy/Utils/wprintgc.cgi
+    translation_table: 11
+
 binning:
     threads: 12
     minimum_contig_length: 1000
@@ -57,6 +64,3 @@ binning:
     # be better suited for environment dominated by archaea; however it tends
     # to split genomes into more bins.
     marker_set: 107
-orfs:
-    # https://www.ncbi.nlm.nih.gov/Taxonomy/Utils/wprintgc.cgi
-    translation_table: 11
