--- a/config/atlas_config.yaml
+++ b/config/atlas_config.yaml
@@ -1,9 +1,11 @@
-eid: debug
+eid: test
 phred_offset: 33
 filtering:
     threads: 4
     # fastas to parse into kmers which are then trimmed from the sequences
-    adapters: ref/phix174_ill.ref.fa.gz,ref/adapters.fa.gz
+    adapters: ref/adapters.fa.gz
+    # Look for shorter kmers at read tips down to this length; 0 disables
+    mink: 8
     # lower than 20 to allow overlap the chance to increase the quality
     minimum_base_quality: 10
     # kmer mismatches allowed during adapter trim process
@@ -13,17 +15,31 @@ filtering:
     # passing single-end read length, prior to merging
     minimum_passing_read_length: 51
     # after merging; the allowable limit of erroneous bases; accepts fractions as well
-    maximum_expected_error: 1
+    maximum_expected_error: 5
+    # maximum number of N's for FASTQ filter
+    maxns: 5
 merging:
     threads: 4
-    minimum_overlap: 10
-    maximum_overlap: 150
+    minimum_overlap: 30
+    maximum_overlap: 220
     maximum_mismatch_density: 0.25
 contamination_filtering:
     threads: 12
-    # fastas placed into ref/contamination_references, list their file names
-    # omitting the path
-    references: adapter.fa,adapter.fa
+    references:
+        ecoli: databases/contaminant/Escherichia_coli_K-12.fa
+        phiX: databases/contaminant/phiX174_virus.fa
+    # Don't look for indels longer than this
+    maxindel: 20
+    # Fraction of max alignment score required to keep a site
+    minratio: 0.65
+    # Minimum number of seed hits required for candidate sites
+    minhits: 1
+    # Set behavior on ambiguously-mapped reads (with multiple top-scoring mapping locations).
+    #   best    (use the first best site)
+    #   toss    (consider unmapped)
+    #   random  (select one top-scoring site randomly)
+    #   all     (retain all top-scoring sites.  Does not work yet with SAM output)
+    ambiguous: best
 assembly:
     threads: 24
     # fraction of the machine's total memory or bytes
